--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My new repo</title>
+    <link rel="stylesheet" href="style.css">
     <p>I am doing well</p>
     <h1>But for some reason i am in pressure</h1>
+    <h3>I am trying best</h3>
+    <li>chips</li>
+    <li>coke</li>
+    <ul>
+        <li>fuska</li>
+        <li>icecream</li>
+    </ul>
 </head>
 <body>
     
